[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/SFX/sfx_enemy_hurt.wav" type="AudioStream" id=1]
[ext_resource path="res://Hit_Hurtboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Singletons/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Enemy_drone_turret/enemy_drone_turret_idle.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Enemy_drone_turret/EnemyDroneTurret.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 83, 81 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 83, 0, 83, 81 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 166, 0, 83, 81 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 249, 0, 83, 81 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 42.0903, 29.8656 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 23.9681, 20.1356 )

[node name="EnemyDroneTurret" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.990494, 0.148651 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 6 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 4

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 1.18921, 0.743256 )
shape = SubResource( 7 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 1.18921, 6.09469 )

[node name="Audio_Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
